# tool-pywisp

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  PROBLEMS.rst  README.rst  pyproject.toml  requirements.txt  setup.py  sh.exe.stackdump
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
docs/examples/: ballintube.rst  generic.rst  index.rst  pendulum.rst  serial.rst  tcp.rst
docs/gamepad/: index.rst
docs/guide/: index.rst
docs/modules/: connection.rst  experimentModules.rst  experiments.rst  gui.rst  index.rst  min.rst  registry.rst  utils.rst  visualization.rst
docs/transport/: index.rst
examples/arduino/ballintube/: connection.py  controller.py  default.sreg  main.py  testbench.py  trajectory.py  visualization.py
examples/arduino/client/: README.rst  connection.py  default.sreg  main.py  testbench.py  trajectory.py  visualization.py
examples/arduino/server/: Min.c  Min.cpp  Min.h  README.rst  Transport.cpp  Transport.h  makefile  server.ino  transport.cpp  transport.h
examples/arduino/server/arm/: Min.cpp  Min.h  Transport.cpp  Transport.h  server.cpp
examples/arduino/server/avr/: README.rst  Transport.h  makefile  server.ino
examples/generic/: .gitignore  CMakeLists.txt  README.rst  codegen.py  dependencies.cmake  pyproject.toml  settings.py
examples/generic/client/: README.rst  connection.py  default.sreg  main.py  settings.py  testbench.py  visualization.py
examples/generic/data/: codegen.py  pyproject.toml  settings.py
examples/generic/inc/: Pendulum.h  TrajType.h  doublePendulum.h  model.h  support.h  trajType.h
examples/generic/scripts/: codegen.py
examples/generic/server/: CMakeLists.txt  README.rst  connect.py  local.cmake  requirements.txt  server.py  settings.py  system.py  uinput.py
examples/generic/server/inc/: model.h
examples/generic/server/src/: server.cpp
examples/generic/sim/: CMakeLists.txt  NonLinDoublePendulum.h  server.cpp  sim.cpp
examples/generic/stm/: CMakeLists.txt  f4.cpp  stm32f4xx_hal_conf.h
examples/generic/toollibsserver/: CMakeLists.txt  README.md
examples/generic/visu/: README.rst  connection.py  default.sreg  main.py  settings.py  testbench.py  trajectory.py  visualization.py
examples/tcp/br-server/: README.rst
examples/tcp/br-server/Logical/: Global.typ  Global.var  Package.pkg
examples/tcp/br-server/Logical/ControlLoop/: ANSIC.prg  Main.cpp
examples/tcp/br-server/Logical/Libraries/: Comm.h  Package.pkg
examples/tcp/br-server/Logical/Libraries/AsIecCon/: Binary.lby
examples/tcp/br-server/Logical/Libraries/Frame/: ANSIC.lby  Frame.h
examples/tcp/br-server/Logical/Libraries/TCPServer/: ANSIC.lby  TCPServer.cpp  TCPServer.h
examples/tcp/br-server/Logical/Libraries/TcpIp/: ANSIC.lby  TcpIpServer.cpp  TcpIpServer.h
examples/tcp/br-server/Logical/Libraries/Transport/: ANSIC.lby  Frame.h  Transport.cpp  Transport.h
examples/tcp/br-server/Logical/Libraries/astime/: Binary.lby
examples/tcp/br-server/Logical/Libraries/runtime/: Binary.lby
examples/tcp/br-server/Logical/TCP_Server/: Main.cpp  Variables.var
examples/tcp/br-server/Logical/TcpIpServer/: Main.cpp  Variables.var
examples/tcp/br-server/Physical/: Physical.pkg
examples/tcp/br-server/Physical/minimal/: Config.pkg  Hardware.hw
examples/tcp/br-server/Physical/minimal/X20CP1586/: Cpu.sw
examples/tcp/br-server/Physical/minimal/X20CP1586/TextSystem/: Package.pkg
examples/tcp/br-server/Physical/minimal/X20CP1586/UnitSystem/: Package.pkg
examples/tcp/br-server/Physical/minimal/X20CP1586/mappCockpit/: Package.pkg
examples/tcp/br-server/Physical/minimal/X20CP1586/mappServices/: Package.pkg
examples/tcp/br-server/Physical/minimal/X20CP1586/mappView/: Package.pkg
examples/tcp/br-server/pywisp_server/: br_server.apj
examples/tcp/br-server/pywisp_server/Logical/: Package.pkg
examples/tcp/br-server/pywisp_server/Logical/Libraries/: Comm.h  Package.pkg
examples/tcp/br-server/pywisp_server/Logical/Libraries/AsBrStr/: Binary.lby
examples/tcp/br-server/pywisp_server/Logical/Libraries/AsIOTime/: Binary.lby
examples/tcp/br-server/pywisp_server/Logical/Libraries/AsTCP/: Binary.lby
examples/tcp/br-server/pywisp_server/Logical/TCP_Server/: ANSIC.prg  Main.cpp
examples/tcp/br-server/pywisp_server/Physical/minimal/: Hardware.hw
examples/tcp/bur/client/: README.rst  default.sreg  testbench.py  trajectory.py
examples/tcp/bur/server/: br_server.apj
examples/tcp/bur/server/Logical/ControlLoop/: Main.cpp
examples/tcp/bur/server/Logical/Libraries/: Comm.h  Package.pkg
examples/tcp/bur/server/Logical/TcpIpServer/: Variables.var
examples/tcp/bur/server/Physical/minimal/: Hardware.hw
examples/tcp/client/: README.rst  default.sreg  main.py  testbench.py  trajectory.py  visualization.py
examples/tcp/pc-server/: CMakeLists.txt  Frame.h  PeriodicTask.h  README.rst  TcpServer.h  Trajectory.h  Transport.cpp  Transport.h  Utils.h  main.cpp  utils.cpp  utils.h
examples/tcp/pc/client/: README.rst  connection.py  controller_config.yaml  default.sreg  visualization.py  xoutput-settings.json
examples/tcp/pc/server/: CMakeLists.txt  Frame.h  PeriodicTask.h  README.rst  TcpServer.h  Utils.h  define.h  main.cpp
examples/tcp/server/: CMakeLists.txt  PeriodicTask.h  TCPServer.cpp  TCPServer.h  TcpServer.h  Transport.cpp  Transport.h  main.cpp  utils.cpp  utils.h
min_WIP/min_comm/: min_comm.ino
min_WIP/min_comm_host/: listen.py  min.py
min_WIP/minhost/: listen.py
min_WIP/signal_comm/: gen.c  gen.h  signal_comm.ino
min_WIP/signal_comm_host/: listen.py  min.py
pywisp/: __init__.py  connection.py  experimentModules.py  experiments.py  gamepad.py  gui.py  inputs.py  min.py  registry.py  settings.py  utils.py  visualization.py
pywisp/resources/: Controller.py  __init__.py  gpPS4-LinuxDefault.yaml  gpPS4-WinDefault.yaml  inputs.py  logging.conf  logging.yaml
pywisp/tests/: connection_test.py
pywisp/widgets/: fileselector.py  plotchart.py  utils.py
tests/: .gitignore  test_plots.py  test_serial.py  test_utils.py
(+25 files in other folders)
