[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pywisp"
description = "Python based Weird visualisation for test bench prototypes."
version = "1.1.0"
authors = [
    { name = "Jens Wurm", email = "jens.wurm@umit-tirol.at"},
    { name = "Jonathan Halmen", email = "jonathan.halmen@umit-tirol.at"},
]
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["pywisp"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: GPL V3 License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    'numpy>1.24.4',
    'PyQt5',
    'matplotlib',
    'pyqtgraph',
    'pyserial',
    'PyYAML',
    'python-dateutil',
    'pandas',
    'sphinx',
    'build',
]

[tool.distutils.bdist_wheel]
universal = true
[tool.hatch.metadata]
allow-direct-references = true
[tool.setuptools]
include-package-data = true
packages = ["pywisp"]
[tool.setuptools.package-dir]
pywisp = "pywisp"

[tool.uv.workspace]
members = ["examples/generic/doublePendulum"]
