[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pywisp"
description = "Python based Weird visualisation for test bench prototypes."
dynamic = ["version"]
authors = [
    { name = "Jens Wurm", email = "jens.wurm@umit-tirol.at"},
    { name = "Jonathan Halmen", email = "jonathan.halmen@umit-tirol.at"},
]
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["pywisp", "visualisation", "lab", "prototyping"]
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy>1.24.4',
    'PyQt5',
    'matplotlib',
    'pyqtgraph',
    'pyserial',
    'PyYAML',
    'python-dateutil',
    'pandas',
    "sphinx",
    'build',
]

[tool.setuptools.dynamic]
version = {attr = "pywisp.__version__"}

[tool.uv.workspace]
members = ["examples/generic/doublePendulum"]
