[project]
name = "doublePendulum"
version = "0.1.0"
description = "Tool-Libs/PyWisp Example using double pendulum"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "exampleData",
    "pywisp",
]

[tool.uv.sources]
pywisp = { path = "../../" }
exampleData = { path = "data/",  editable = true }
